[gd_scene load_steps=7 format=3 uid="uid://cwctp3ib4u4in"]

[ext_resource type="Texture2D" uid="uid://ca121ix0tltot" path="res://game_assets/images/_system/menu_bg.png" id="1_3hv6l"]
[ext_resource type="Script" uid="uid://jmqegmrpxexi" path="res://game_hud/hud_halftime.gd" id="1_7id8q"]
[ext_resource type="Texture2D" uid="uid://dgwee3fovfva5" path="res://game_assets/images/defaults/shield.png" id="3_r2f7r"]
[ext_resource type="Theme" uid="uid://bt11ooea31t6o" path="res://themes/basic_button.tres" id="4_7gxfn"]
[ext_resource type="Theme" uid="uid://our0uecgf1p5" path="res://themes/menu_font.tres" id="6_7gxfn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p3iqr"]
texture = ExtResource("1_3hv6l")

[node name="HUD_Halftime" type="Panel"]
custom_minimum_size = Vector2(1080, 1920)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_p3iqr")
script = ExtResource("1_7id8q")

[node name="hud_title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2
theme = ExtResource("6_7gxfn")
theme_override_font_sizes/font_size = 120
text = "Medio Tiempo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="."]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
offset_left = 133.0
offset_top = 1500.0
offset_right = 933.0
offset_bottom = 1650.0
theme = ExtResource("4_7gxfn")
text = "cerrar
"

[node name="ContinueButton" type="Button" parent="ContinueButton"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 0
offset_left = 133.0
offset_top = 1500.0
offset_right = 933.0
offset_bottom = 1650.0
theme = ExtResource("4_7gxfn")
text = "cerrar
"

[node name="GridContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 210.0
offset_top = 400.0
offset_right = -220.0
offset_bottom = 1400.0
grow_horizontal = 2

[node name="Name1" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_7gxfn")
text = "Team 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="Shield1" type="TextureRect" parent="GridContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_r2f7r")

[node name="Score1" type="Label" parent="GridContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("6_7gxfn")
theme_override_font_sizes/font_size = 200
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Name2" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_7gxfn")
text = "Team 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="Shield2" type="TextureRect" parent="GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_r2f7r")

[node name="Score2" type="Label" parent="GridContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("6_7gxfn")
theme_override_font_sizes/font_size = 200
text = "2"
horizontal_alignment = 1
vertical_alignment = 1
